--- a/startup_matchmaker/index.html
+++ b/startup_matchmaker/index.html
@@ -21,7 +21,7 @@
 				</h1>
 			</div>
 			<div>
-				<nav class="">
+				<nav>
 					<ul class="nav_main">
 						<li><a href="#"><span class="nav_bold">Find Developers</span></a></li>
 						<li><a href="#"><span class="nav_bold">Find Designers</span></a></li>
